# DeepSearch

./: .env.example  .gitignore  .gitmodules  Makefile  README.md  UnslothGRPOTrainerTemp.py  app.py  config.py  embeddings.py  eval.py  eval.sh  generate_data.py  generate_data_but_less_dumb.py  inference.py  pyproject.toml  requirements.txt  rl_helpers.py  search_module.py  simple_qa.py  train.sh  train_autodidact.py  train_autodidact_1B.py  train_grpo.py  ugly_code_file.py
data/: chunks.csv  index.pkl  paragraphs_noise.csv  questions.json  questions.jsonl
docs/: 00_worklog.md  adaptive-search-behavior.md  agent-action.md  agentic-reward-modeling.md  anti-dumb-reward-extact-match-chunk-prompt.md  brain-rotting-multiple-gpu-workflow-for-dummies.md  chat-template-101.md  choosing-llm-and-prompt-101.md  dataset.md  debug-training-grpo-for-r1-distil.md  ds-pipeline-v0.md  evaluation.md  experiment-log.md  grpo-idea.md  hallucination.md  inspect-chat-state.md  merge-chunk-content-to-data-prompt.md  paraphrase-prompt.md  project-overview-mermaid.md  r1-searcher.md  random-popup-idea-💡.md  reward-functions.md  search-backends.md  search-r1.md  stuff-that-didnt-work-❌.md  stuff-that-worked-✅.md  understanding-search-engine-101.md
notebooks/: .gitignore  250324_generate_data_anatomy.ipynb  250325_fak_you_chattemplate.ipynb  250325_inspect_qa_dataset.ipynb  250325_visualize_reward_function.ipynb  250329_saving_inference.ipynb  250331_train_grpo_r1_distil.ipynb  250331_train_grpo_r1_distil_llama3b.ipynb  250402_inspect_mask.ipynb  250407_cook_vllm_sglang.ipynb  250408_cook_gradio_agent_demo.ipynb  250408_cook_search_api.ipynb  250410_cook_better_data.ipynb  (+6 more)
(+43 files in other folders)
