[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "src"
version = "0.0.1"
description = "A short description of the project."
authors = [
  { name = "Your name (or your organization/company/team)" },
]
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
]

requires-python = "~=3.11.0"

dependencies = [
    "datasets",
    "faiss-cpu",
    "langchain",
    "langchain-community",
    "Markdown",
    "tokenizers",
    "unsloth",
    "unsloth_zoo",
    "unstructured",
    "vllm==0.7.2",
    "transformers==4.49.0",
    "ipykernel",
    "python-dotenv",
    "loguru",
    "gradio",
    "tensorboard",
    "pytest",
    "wandb",
    "requests>=2.31.0",
    "tqdm>=4.66.1",
    "tavily-python",
    "sglang[all]>=0.4.5",
]